--- a/index.html
+++ b/index.html
@@ -30,8 +30,65 @@
     <h2>We are UAT</h2>
 </div>
 
+<!---Degrees Overview -->
+<div class="degrees">
+  <div class="box businessInnovation">Business & Innovation<br>
+    <ul>
+      <li><a href="https://www.uat.edu/business-technology-degree">Business Technology</a></li>
+      <li><a href="https://www.uat.edu/technology-studies-degree">Technology Studies</a></li>
+      <li><a href="https://www.uat.edu/master-of-science">Technology Innovation (MS)</a></li>
+      <li><a href="https://www.uat.edu/master-of-science">Technology Leadership (MS)</a></li>
+    </ul>
+  </div>
+
+  <div class="box creationSimulation">Creation & Simulation
+    <ul>
+      <li><a href="https://www.uat.edu/digital-maker-and-fabrication-degree">Digital Marketer & Fabreication</a></li>
+      <li><a href="https://www.uat.edu/human-computer-interaction-degree">Human Computer Interaction</a></li>
+      <li><a href="https://www.uat.edu/robotics-and-embedded-systems-degree">Robotics & Embedded Systems</a></li>
+      <li><a href="https://www.uat.edu/virtual-reality-degree">Viritual Reality</a></li>
+    </ul>
+  </div>
+
+  <div class="box cyberSecurity">Cyber Security
+    <ul>
+      <li><a href="https://www.uat.edu/network-engineering-degree">Network Engeneering</a></li>
+      <li><a href="https://www.uat.edu/network-security-degree">Network Scurity</a></li>
+      <li><a href="https://www.uat.edu/technology-forensics-degree">Technology Forensics</a></li>
+      <li><a href="https://www.uat.edu/master-of-science">Cyber Security (MS)</a></li>
+    </ul>
+    </div>
+
+  <div class="box digitalArts">Digital Arts
+    <ul>
+      <li><a href="https://www.uat.edu/advertising-art-degree">Advertising Art</a></li>
+      <li><a href="https://www.uat.edu/digital-marketing-degree">Digital Marketing</a></li>
+      <li><a href="https://www.uat.edu/digital-video-degree">Digital Video</a></li>
+    </ul>
+  </div>
+
+  <div class="box gameStudies">Game Studies
+    <ul>
+      <li><a href="https://www.uat.edu/game-art-and-animation-degree">Game Art & Animation</a></li>
+      <li><a href="https://www.uat.edu/game-design-degree">Game Design</a></li>
+      <li><a href="https://www.uat.edu/game-programming-degree">Game Programming</a></li>
+      <li><a href="https://www.uat.edu/master-of-science">Game Production (MS)</a></li>
+    </ul>
+  </div>
+
+  <div class="box softwareEngeneering">Software Engeneering
+    <ul>
+      <li><a href="https://www.uat.edu/advancing-computer-science-degree">Advancing Computer Science</a></li>
+      <li><a href="https://www.uat.edu/artificial-intelligence-degree">Artificial Intellegence</a></li>
+      <li><a href="https://www.uat.edu/data-science-degree">Data Science</a></li>
+      <li><a href="https://www.uat.edu/master-of-science">Software Engeneering (MS)</a></li>
+    </ul>
+  </div>
+</div>
+
+
 <footer id="contact">
-    
+
 </footer>
 
 </body>
