--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
 
 <body>
 
-<div class="header">
-    <a href="index.html">
-        <img src="images/logo.png" alt="Logo">
+<nav class="navigation-container">
+    <a href="index.html" class="logo">
+        <img src="images/logo.png" alt="University of Advancing Technology Logo">
     </a>
-
-    <nav class="navigation">
-        <ul>
-            <li><a href="https://www.uat.edu/synchronic-learning#">Academics</a></li>
-            <li><a href="https://www.uat.edu/private-consultation">Admissions</a></li>
-            <li><a href="https://jobs.uat.edu/">Careers</a></li>
-            <li><a href="https://www.uat.edu/see-technology-college">Student Experience</a></li>
-            <li><a href="https://www.uat.edu/about-uat">About UAT</a></li>
-            <li><a href="#contact">Contact</a></li>
+        <ul class="navigation-bar">
+            <li class="nav-item"><a href="https://www.uat.edu/synchronic-learning#">Academics</a></li>
+            <li class="nav-item"><a href="https://www.uat.edu/private-consultation">Admissions</a></li>
+            <li class="nav-item"><a href="https://jobs.uat.edu/">Careers</a></li>
+            <li class="nav-item"><a href="https://www.uat.edu/see-technology-college">Student Experience</a></li>
+            <li class="nav-item"><a href="https://www.uat.edu/about-uat">About UAT</a></li>
+            <li class="nav-item"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-</div>
 
 <div id="banner-container">
-    <h2>We are UAT</h2>
+    <div class="banner-text">
+     <h1>Shaping tomorrow 
+         <br>
+         Changing today
+     </h1>
+    </div>
 </div>
 
 <!---Degrees Overview -->
