--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e896f10c97.js" crossorigin="anonymous"></script>
+
 <title>University of Advancing Technology</title>
 </head>
 
 <body>
 
+<!---Navigation bar -->
 <nav class="navigation-container">
     <a href="index.html" class="logo">
         <img src="images/logo.png" alt="University of Advancing Technology Logo">
@@ -24,6 +27,7 @@
         </ul>
     </nav>
 
+<!---Banner-->
 <div id="banner-container">
     <div class="banner-text">
      <h1>Shaping tomorrow 
@@ -89,9 +93,44 @@
   </div>
 </div>
 
+<!---Blog posts-->
+<div class="blog">
+  <h1>Latest blog posts</h1>
+  <div class="blog-posts">
+    <div class="blog-post1"> <a href="https://blog.uat.edu/russia-actually-arrested-a-russian-hacker?_ga=2.54242856.1687102361.1605082410-176467249.1602245289"> Russia acutally arrested a Russian hacker <i class="fas fa-arrow-circle-right"></i></a></div>
+    <div class="blog-post2"><a href="https://blog.uat.edu/bug-bounties-in-2020?_ga=2.54242856.1687102361.1605082410-176467249.1602245289"> Bug Bounties in 2020 <i class="fas fa-arrow-circle-right"></i></a></div>
+    <div class="blog-post3"><a href="https://blog.uat.edu/recording-dreams"> Recording Dreams <i class="fas fa-arrow-circle-right"></i></a></div>
+    </div>
+    <a href="https://blog.uat.edu/"><p> Read more from our blog <i class="fas fa-arrow-circle-right"></i></p></a>
+</div>
 
+<!---Contact-->
 <footer id="contact">
+  <h1>Contact information</h1>
+  <a href="https://uatfastapp.com/LPR.asp?L=284&__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605114073669.1605172811494.9&__hssc=214042312.4.1605172811494&__hsfp=1701980970&_ga=2.252215945.1687102361.1605082410-176467249.1602245289" class="button1">Apply Now</a>
+  <a href="https://www.uat.edu/request-info" class="button2">Request info</a>
+  <h3>Phone number: (800)658-5744</h3>
+  <h3>Address: 2625 W. Baseline Rd, Tempe, AZ 85283-1056</h3>
+  
+  <!---List of icons-->
+  <div class="icons">
+    <h2>Follow us</h2>
+    <ul>
+      <li><i class="fab fa-facebook-f"></i></li>
+      <li><i class="fab fa-twitter"></i></li>
+      <li><i class="fab fa-instagram"></i></li>
+      <li><i class="fab fa-linkedin-in"></i></li>
+      <li><i class="fab fa-twitch"></i></li>
+      <li><i class="fab fa-youtube"></i></li>
+      <li><i class="fab fa-snapchat-ghost"></i></li>
+      <li><i class="fab fa-discord"></i></li>
+      <li><i class="fab fa-reddit-alien"></i></li>
+      <li><i class="fab fa-flickr"></i></li>
+      <li><i class="fab fa-tiktok"></i></li>
+    </ul>
+  </div>
 
+  <p>&copy;2020 University of Advancing Technology</p>
 </footer>
 
 </body>
