--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 </div>
 
 <!---Degrees Overview -->
+<div class="degrees-heading">
+  <h1>Our Degrees</h1>
+</div>
+
 <div class="degrees">
   <div class="box businessInnovation">Business & Innovation<br>
     <ul>
@@ -98,22 +102,22 @@
 <div class="news-container">
   <h1>Announcements and News</h1>
   <div class="news">
-    <div class="news-post"> <a href="https://learn.uat.edu/novel-coronavirus-covid-19?_ga=2.251317638.1687102361.1605082410-176467249.1602245289"> 
+    <div class="news-post"> <a href="https://learn.uat.edu/novel-coronavirus-covid-19?_ga=2.251317638.1687102361.1605082410-176467249.1602245289">
       <div class="text">Covid-19 Updates</div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="news-post"><a href="https://learn.uat.edu/episode-2020?_ga=2.247696775.1687102361.1605082410-176467249.1602245289"> 
+    <div class="news-post"><a href="https://learn.uat.edu/episode-2020?_ga=2.247696775.1687102361.1605082410-176467249.1602245289">
     <div class="text">Fall Semester Updates</div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
     <div class="news-post"><a href="https://www.uattech.com/uat-refurbathon-results-in-121-free-computers-for-title-1-schools?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.256017675.1687102361.1605082410-176467249.1602245289">
       <div class="text">UAT Refurbathon Results</div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="news-post"><a href="https://www.uattech.com/finding-the-place-where-your-student-fits-in?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.19562936.1687102361.1605082410-176467249.1602245289"> 
+    <div class="news-post"><a href="https://www.uattech.com/finding-the-place-where-your-student-fits-in?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.19562936.1687102361.1605082410-176467249.1602245289">
       <div class="text">Finding the Right Place</div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="news-post"><a href="https://www.uattech.com/what-i-wish-i-knew-before-i-went-to-college-?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.19562936.1687102361.1605082410-176467249.1602245289"> 
+    <div class="news-post"><a href="https://www.uattech.com/what-i-wish-i-knew-before-i-went-to-college-?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.19562936.1687102361.1605082410-176467249.1602245289">
       <div class="text">What I Wish I Knew </div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="news-post"><a href="https://www.uat.edu/uatx"> 
+    <div class="news-post"><a href="https://www.uat.edu/uatx">
       <div class="text">UAT Virtual Open House</div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
     <a href="https://studentnews.uat.edu/"><p> Read more news here <i class="fas fa-arrow-circle-right"></i></p></a>
@@ -124,30 +128,30 @@
 <div class="blog-container">
   <h1>Latest blog posts</h1>
   <div class="blog">
-    <div class="blog-post"> <a href="https://blog.uat.edu/russia-actually-arrested-a-russian-hacker?_ga=2.54242856.1687102361.1605082410-176467249.1602245289"> 
+    <div class="blog-post"> <a href="https://blog.uat.edu/russia-actually-arrested-a-russian-hacker?_ga=2.54242856.1687102361.1605082410-176467249.1602245289">
       <div class="text">Russia actually arrested a Russian hacker</div>
         <i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="blog-post"><a href="https://blog.uat.edu/bug-bounties-in-2020?_ga=2.54242856.1687102361.1605082410-176467249.1602245289"> 
-      <div class="text">Bug Bounties in 2020</div> 
+    <div class="blog-post"><a href="https://blog.uat.edu/bug-bounties-in-2020?_ga=2.54242856.1687102361.1605082410-176467249.1602245289">
+      <div class="text">Bug Bounties in 2020</div>
       <i class="fas fa-arrow-circle-right"></i></a>
     </div>
     <div class="blog-post"><a href="https://www.uattech.com/from-student-to-coworker-perimeter83-expands-offerings-for-uat-alum?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.214140439.1687102361.1605082410-176467249.1602245289">
       <div class="text">From Student to Coworker... </div> <i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="blog-post"><a href="https://blog.uat.edu/recording-dreams"> 
-      <div class="text">Recording Dreams</div> 
+    <div class="blog-post"><a href="https://blog.uat.edu/recording-dreams">
+      <div class="text">Recording Dreams</div>
       <i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="blog-post"><a href="https://www.uattech.com/an-interview-with-student-dominique-faulkner-usaf-veteran?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.214140439.1687102361.1605082410-176467249.1602245289"> 
+    <div class="blog-post"><a href="https://www.uattech.com/an-interview-with-student-dominique-faulkner-usaf-veteran?__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605184931684.1605265474369.12&__hssc=214042312.4.1605265474369&__hsfp=1701980970&_ga=2.214140439.1687102361.1605082410-176467249.1602245289">
       <div class="text">An Interview with Student...</div>
       <i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <div class="blog-post"><a href="https://blog.uat.edu/the-evolution-of-robotics?_ga=2.214140439.1687102361.1605082410-176467249.1602245289"> 
+    <div class="blog-post"><a href="https://blog.uat.edu/the-evolution-of-robotics?_ga=2.214140439.1687102361.1605082410-176467249.1602245289">
       <div class="text"><h3>The Evolution of Robotics</h3></div>
       <i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <a href="https://blog.uat.edu/"><p> Read more from our blog 
+    <a href="https://blog.uat.edu/"><p> Read more from our blog
       <i class="fas fa-arrow-circle-right"></i></p></a>
   </div>
 </div>
