--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
 <!---Banner-->
-<div id="banner-container">
+<div class="banner-container">
     <div class="banner-text">
      <h1>Shaping tomorrow
          <br>
@@ -158,15 +158,21 @@
 
 <!---Contact-->
 <footer id="contact">
-  <h1>Contact information</h1>
+  <div class=buttons>
   <a href="https://uatfastapp.com/LPR.asp?L=284&__hstc=214042312.c6e33109c80b43a3fd00ce1ba2ec857f.1602245303710.1605114073669.1605172811494.9&__hssc=214042312.4.1605172811494&__hsfp=1701980970&_ga=2.252215945.1687102361.1605082410-176467249.1602245289" class="button1">Apply Now</a>
   <a href="https://www.uat.edu/request-info" class="button2">Request info</a>
+</div>
+  <div class=contact-text>
+  <h1>Contact information</h1>
   <h3>Phone number: (800)658-5744</h3>
   <h3>Address: 2625 W. Baseline Rd, Tempe, AZ 85283-1056</h3>
+</div>
+  
 
   <!---List of icons-->
-  <div class="icons">
-    <h2>Follow us</h2>
+  <div class="icons-container">
+    <!---<div class="follow"><h2>Follow us</h2></div>-->
+    <div class="icons">
     <ul>
       <li><i class="fab fa-facebook-f"></i></li>
       <li><i class="fab fa-twitter"></i></li>
@@ -180,9 +186,10 @@
       <li><i class="fab fa-flickr"></i></li>
       <li><i class="fab fa-tiktok"></i></li>
     </ul>
+    </div>
   </div>
 
-  <p>&copy;2020 University of Advancing Technology</p>
+  <div class="copy"><p>&copy;2020 University of Advancing Technology</p></div>
 </footer>
 
 </div>
