--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <!---Banner-->
 <div class="banner-container">
     <div class="banner-text">
-     <h1>SHAPING TOMORROW
+     <h1>Shaping tomorrow
          <br>
-         CHANGING TODAY
+         Changing today
      </h1>
     </div>
 </div>
