--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 
 <div class="degrees">
-  <div class="box businessInnovation">Business & Innovation<br>
+  <div class="box businessInnovation"><b>Business & Innovation</b>
     <ul>
       <li><a href="https://www.uat.edu/business-technology-degree">Business Technology</a></li>
       <li><a href="https://www.uat.edu/technology-studies-degree">Technology Studies</a></li>
@@ -53,7 +53,7 @@
     </ul>
   </div>
 
-  <div class="box creationSimulation">Creation & Simulation
+  <div class="box creationSimulation"><b>Creation & Simulation</b>
     <ul>
       <li><a href="https://www.uat.edu/digital-maker-and-fabrication-degree">Digital Marketer & Fabreication</a></li>
       <li><a href="https://www.uat.edu/human-computer-interaction-degree">Human Computer Interaction</a></li>
@@ -62,7 +62,7 @@
     </ul>
   </div>
 
-  <div class="box cyberSecurity">Cyber Security
+  <div class="box cyberSecurity"><b>Cyber Security</b>
     <ul>
       <li><a href="https://www.uat.edu/network-engineering-degree">Network Engeneering</a></li>
       <li><a href="https://www.uat.edu/network-security-degree">Network Scurity</a></li>
@@ -71,7 +71,7 @@
     </ul>
     </div>
 
-  <div class="box digitalArts">Digital Arts
+  <div class="box digitalArts"><b>Digital Arts</b>
     <ul>
       <li><a href="https://www.uat.edu/advertising-art-degree">Advertising Art</a></li>
       <li><a href="https://www.uat.edu/digital-marketing-degree">Digital Marketing</a></li>
@@ -79,7 +79,7 @@
     </ul>
   </div>
 
-  <div class="box gameStudies">Game Studies
+  <div class="box gameStudies"><b>Game Studies</b>
     <ul>
       <li><a href="https://www.uat.edu/game-art-and-animation-degree">Game Art & Animation</a></li>
       <li><a href="https://www.uat.edu/game-design-degree">Game Design</a></li>
@@ -88,7 +88,7 @@
     </ul>
   </div>
 
-  <div class="box softwareEngeneering">Software Engeneering
+  <div class="box softwareEngeneering"><b>Software Engeneering</b>
     <ul>
       <li><a href="https://www.uat.edu/advancing-computer-science-degree">Advancing Computer Science</a></li>
       <li><a href="https://www.uat.edu/artificial-intelligence-degree">Artificial Intellegence</a></li>
@@ -120,7 +120,7 @@
     <div class="news-post"><a href="https://www.uat.edu/uatx">
       <div class="text">UAT Virtual Open House</div><i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <a href="https://studentnews.uat.edu/"><p> Read more news here <i class="fas fa-arrow-circle-right"></i></p></a>
+    <div class="read-more"><a href="https://studentnews.uat.edu/"><p> Read more news here <i class="fas fa-arrow-circle-right"></i></p></a></div>
   </div>
 </div>
 
@@ -151,8 +151,8 @@
       <div class="text">The Evolution of Robotics</div>
       <i class="fas fa-arrow-circle-right"></i></a>
     </div>
-    <a href="https://blog.uat.edu/"><p> Read more from our blog
-      <i class="fas fa-arrow-circle-right"></i></p></a>
+    <div class="read-more"><a href="https://blog.uat.edu/"><p> Read more from our blog
+      <i class="fas fa-arrow-circle-right"></i></p></a></div>
   </div>
 </div>
 
@@ -167,7 +167,7 @@
   <h3>Phone number: (800)658-5744</h3>
   <h3>Address: 2625 W. Baseline Rd, Tempe, AZ 85283-1056</h3>
 </div>
-  
+
 
   <!---List of icons-->
   <div class="icons-container">
